Issue 285 - Fixed info dialog attribute ordering. Issue 277 - Fixed species attribute id assigning. Issue 211 - Fixed portal preferences 'non required' fields are now actually not required.